--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="glyphicons_551_erase" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\glyphicons-551-erase.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="glyphicons_327_piano" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\glyphicons-327-piano.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
